# AletheIA_api

./: .dockerignore  .env.example  .gitlab-ci.yml  AGENT.md  BENCHMARK.md  Dockerfile  GEMINI.md  README.md  benchmark.sh  docker-compose.yml  setup.sh  stress_test.lua
app/: CMakeLists.txt
app/src/: BiometricIndex.cpp  BiometricIndex.hpp  Config.hpp  Database.cpp  Database.hpp  Engine.cpp  Engine.hpp  ImageProcessor.cpp  ImageProcessor.hpp  OnnxClassifier.cpp  OnnxClassifier.hpp  main.cpp
app/tests/: test_biometrics.cpp  test_database.cpp  test_engine.cpp  test_inspireface.cpp  test_main.cpp  test_onnx.cpp  test_opencv.cpp
models/: document_classifier.onnx
models/.inspireface/ms/tunmxy/InspireFace/: .msc  .mv
